# telegram-announcement-scheduler

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 073ea9d25feb_initial_schema.py
backend/app/: main_api.py
backend/app/api/: auth.py  deps.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  admin_user.py  audit_log.py  channel.py  media_upload.py  scheduled_message.py  send_history.py
backend/app/schemas/: api.py
backend/app/services/: admin_service.py  rate_limiter.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
traefik/: traefik.yml
traefik/dynamic/: routes.yml
