[project]
name = "tg-scheduler"
version = "0.1.0"
description = "Telegram Ad/Announcement Scheduler"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "psycopg-binary>=3.3.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"
