[project]
name = "tg-scheduler"
version = "0.1.0"
description = "Telegram Ad/Announcement Scheduler"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "psycopg-binary>=3.3.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.21",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    "alembic"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",     # ruff-specific
]
ignore = [
    "E501",
    "B008"
]

[tool.mypy]
mypy_path = ["."]
python_version = "3.14"
strict = true
pretty = true
follow_imports = "silent"
warn_no_return = true
warn_unreachable = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
exclude = [
    "alembic"
]

[tool.pydantic-mypy]
warn_required_dynamic_aliases = true
warn_untyped_fields = true
init_typed = true
